# bridge-retrofit

./: .gitignore  README.md  pyproject.toml  requirements-colab.txt  requirements.txt
configs/: colab_large.yaml  default.yaml
docs/: configuration.md
notebooks/: 00_colab_quickstart.md  01_EDA.ipynb  02_Preprocessing.ipynb  03_Severity_Model.ipynb  04_KNN_Similarity.ipynb  05_Evaluation.ipynb  06_Full_Pipeline_Demo.ipynb
src/bridge_retrofit/: __init__.py  cli.py  config.py  pipeline.py
src/bridge_retrofit/app/: __init__.py  gradio_app.py
src/bridge_retrofit/data/: __init__.py  io.py
src/bridge_retrofit/evaluation/: __init__.py  reports.py
src/bridge_retrofit/models/: __init__.py  persistence.py  retrofit.py  severity.py  similarity.py
src/bridge_retrofit/preprocessing/: __init__.py  pipeline.py
tests/: conftest.py  test_cli_args.py  test_smoke.py
