[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-retrofit"
version = "0.1.0"
description = "Bridge failure severity prediction + retrofit recommendation via similarity retrieval"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bridge-retrofit = "bridge_retrofit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

